<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Dialog button 'close' -->
    <string name="dialog_button_close">Close</string>
    <!-- Dialog button 'retry' -->
    <string name="dialog_button_retry">Retry</string>
    <!-- Dialog button 'save' (save whatever changes were made in the dialog) -->
    <string name="dialog_button_save">Save</string>
    <!-- Dialog button 'cancel'-->
    <string name="dialog_button_cancel">Cancel</string>
    <!-- Shown when viewing the list of 'excluded' (blacklisted) songs, and it's empty-->
    <string name="dialog_exclude_list_empty">Exclude list is empty</string>
    <!-- Dialog title shown when attempting to delete a song -->
    <string name="dialog_delete_title">Delete</string>
    <!-- Dialog warning message to indicate the song will be permanently deleted -->
    <string name="dialog_delete_message">\'<xliff:g example="Lateralus" id="item">%1$s</xliff:g>\' will be permanently deleted</string>
    <!-- Dialog button to confirm deletion of the selected song(s)-->
    <string name="dialog_delete_button">Delete</string>
</resources>
