<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Menu option to start playback of the artist/album/all songs -->
    <string name="menu_title_play">Play</string>
    <!-- Menu option to shuffle artist/album/all songs -->
    <string name="menu_title_shuffle">Shuffle</string>
    <!-- Menu option to open the album's own detail screen -->
    <string name="menu_title_view_album">Go to album</string>
    <!-- Menu option to start 'album shuffle' mode (plays a random album, where tracks are played in order)-->
    <string name="menu_title_album_shuffle">Album Shuffle</string>
    <!-- Menu option to add this song to the queue, to play next -->
    <string name="menu_title_play_next">Play Next</string>
    <!-- Menu option to open the tag editor for this song/album/artist -->
    <string name="menu_title_edit_tags">Edit Tags</string>
    <!-- Menu option to add the selected song to the 'favorites' playlist -->
    <string name="menu_title_favorite">Favorite</string>
    <!-- Menu option to show the 'song info' dialog -->
    <string name="menu_title_song_info">Song Info</string>
    <!-- Menu option to delete the selected artist/album/song -->
    <string name="menu_title_delete">Delete</string>
    <!-- Menu option to add an artist/album/song to the list of excluded (blacklisted) songs-->
    <string name="menu_title_exclude">Exclude</string>
    <!-- Menu option to open the sorting submenu -->
    <string name="menu_title_sort_by">Sort by</string>
    <!-- Menu option to sort by album name -->
    <string name="menu_title_sort_album_name">Album Name</string>
    <!-- Menu option to sort by artist name -->
    <string name="menu_title_sort_artist_name">Artist Name</string>
    <string name="menu_title_sort_album_count">Album Count</string>
    <!-- Menu option to sort by song name -->
    <string name="menu_title_sort_song_name">Song Name</string>
    <!-- Menu option to sort by year-->
    <string name="menu_title_sort_year">Year</string>
    <!-- Menu option to sort by song duration -->
    <string name="menu_title_sort_duration">Duration</string>
    <!-- Menu option to sort by last modified date -->
    <string name="menu_title_sort_date_modified">Last modified</string>
    <!-- Menu option to sort playlists by a custom sort order (user-defined sort order) -->
    <string name="menu_title_sort_custom">Custom</string>
    <!-- Menu option to reverse the current playlist sort order -->
    <string name="menu_title_sort_descending">Descending</string>
    <!-- Menu option to sort albums in a random order, reshuffled each time it's selected -->
    <string name="menu_title_sort_random">Random</string>
    <!-- Menu option to sort playlists alphabetically by name -->
    <string name="menu_title_sort_playlist_name">Name</string>
    <!-- Menu option to sort genres alphabetically by name -->
    <string name="menu_title_sort_genre_name">Name</string>
    <!-- Menu option to sort genres by how many songs they contain -->
    <string name="menu_title_sort_song_count">Song Count</string>
    <!-- Menu option to sort playlists by the date they were created -->
    <string name="menu_title_sort_date_created">Date Created</string>
    <!-- Menu option to rename a playlist-->
    <string name="menu_title_rename">Rename</string>
    <!-- Menu option to clear (remove) all tracks in a playlist-->
    <string name="menu_title_clear">Clear</string>
    <!-- Menu option to add an artist/album/song to a playlist-->
    <string name="menu_title_add_to_playlist">Add to Playlist</string>
    <!-- Menu option to add the selected artist/album/song to the queue-->
    <string name="menu_title_add_to_queue">Add to Queue</string>
    <!-- Menu option to remove the selected item from the queue -->
    <string name="menu_title_remove_from_queue">Remove from Queue</string>
    <string name="menu_title_remove_from_favorites">Remove from Favorites</string>
    <!-- Menu option to remove all items from the queue -->
    <string name="menu_title_sort_clear_queue">Clear Queue</string>
    <!-- Menu option to save the current queue as a new or existing playlist -->
</resources>
