<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Menu option to create a new playlist -->
    <string name="playlist_menu_create_playlist">New Playlist</string>
    <!-- Shown when a playlist is successfully created -->
    <string name="playlist_menu_create_playlist_success">\'<xliff:g example="Favorites" id="playlist_name">%1$s</xliff:g>\' successfully created</string>
    <!-- Shown when songs can't be added to a playlist, due to an error -->
    <string name="playlist_menu_create_playlist_failure">Failed to add songs to playlist: <xliff:g example="Playlist already exists" id="error_message">%1$s</xliff:g></string>
    <!-- The 'hint' text shown when creating a playlist. This indicates the text field is for 'Playlist Name'-->
    <string name="playlist_create_dialog_playlist_name_hint">Playlist Name</string>
    <!-- Button to show the 'delete playlist' dialog, which will ask the user to confirm this action -->
    <string name="playlist_dialog_title_delete">Delete Playlist</string>
    <!-- Shown when the user attempts to delete a playlist. Asking the user to confirm that this playlist will be permanently deleted -->
    <string name="playlist_dialog_subtitle_delete"><xliff:g example="Favorites" id="playlist_name">%1$s</xliff:g> will be permanently deleted</string>
    <!-- Button to confirm deletion of the selected playlist -->
...
